# travel_ROUTER

./: .env.sample  .env_sample  Dockerfile  README.md  __init__.py  app.py  pyproject.toml  requirements.txt  setup.py
feature/retrieval/: README.md  main1.py  parallel_search.py  put_data2qdrant.py  pyproject.toml  qdrant_search.py  sample.py
feature/retrieval/embeding_data/: ChIJ---TJYypQjQRNipOm6saF74.json  ChIJ--BGGROqQjQRcOamjS8UMW4.json  ChIJ--IAVHCpQjQREro-d5JTYxU.json  ChIJ--MkGuilQjQRDCEmUAncjwM.json  ChIJ--OtBC2qQjQRsSZzy2NIUbc.json  ChIJ--tcLdWvQjQR-nAfNjIShK0.json  ChIJ-0Ccg8oCaDQRNywXfRc11vc.json  ChIJ-0FpgIioQjQRiF6WfqOiXy4.json  ChIJ-0K-ZQunQjQRXW675sgYGtY.json  ChIJ-0eRjL6tQjQRF7T82-xuo-U.json  ChIJ_____-__ZzQRuIvU1WQmaqg.json  ChIJ_____3alQjQRWlcnOtB6UYM.json  ChIJ_____3aqQjQRajjMpIihQpc.json  ChIJ_____7KpQjQRYZ3UQJrm0Nw.json  ChIJ_____7OpQjQRNA_qw6K6EcY.json  ChIJ_____wKqQjQRZSxHaKkcrZs.json  ChIJ_____xuoQjQR-d8KPieSHvQ.json  ChIJ_____zSqQjQRMnFa-u6AZ4s.json
feature/retrieval/llm_connect/: Chat_gpt.py  CollectiveConsciousness.py  emotion.py  gemini.py
feature/retrieval/llm_whole/: clean_review.py  jina_control_number.py  jina_embedding.py  qdrent_vector.py  search_by_cos.py  search_filepath.py
feature/retrieval/utils/: qdrant_control.py
feature/retrieval/餐廳評論爬蟲/: ChIJ_____-__ZzQRuIvU1WQmaqg.json  ChIJ_____2apQjQR9klrvEjIeW4.json  ChIJ_____3alQjQRWlcnOtB6UYM.json  (+4 more)
feature/retrieval/餐廳評論爬蟲 (1)/: ChIJ_____3ipQjQRg9PEmuGiDDc.json  ChIJ_____7OpQjQRNA_qw6K6EcY.json  ChIJ_____xuoQjQR-d8KPieSHvQ.json  ChIJ_____zSqQjQRMnFa-u6AZ4s.json
(+131 files in other folders)
